codebase/t0/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rest-api
spec:
  ingressClassName: k8s.dev.com
  rules:
  - http:
      paths:
      - path: /
        pathType: Exact
        backend:
          service:
            name: rest-api
            port:
              number: 80
